@@ -17,7 +17,7 @@ remove = Test::More
 [Prereqs]
 Acme::Alien::DontPanic                         = 2.6500
 Acme::Alien::DontPanic2                        = 2.6500
-Acme::Color::Rust                              = 0.03
+Acme::Color::Rust                              = 0.04
 Acme::Ford::Prefect                            = 2.6500
 Acme::Ford::Prefect2                           = 2.6500
 Acme::Ford::Prefect::FFI                       = 2.6500
@@ -50,7 +50,7 @@ Alien::cmake3                                  = 0.08
 Alien::curl                                    = 0.10
 Alien::Editline                                = 0.10
 Alien::Expat                                   = 0.04
-Alien::FFI                                     = 0.25
+Alien::FFI                                     = 0.27
 Alien::flex                                    = 0.15
 Alien::ghostunnel                              = 0.01
 Alien::gmake                                   = 0.24
@@ -76,7 +76,7 @@ Alien::nasm                                    = 0.23
 Alien::Nettle                                  = 0.05
 Alien::OpenSSL                                 = 0.15
 Alien::patch                                   = 0.15
-Alien::pkgconf                                 = 0.18
+Alien::pkgconf                                 = 0.19
 Alien::Role::Alt                               = 0.05
 Alien::Role::Dino                              = 0.08
 Alien::unzip                                   = 0.03
@@ -139,14 +139,14 @@ FFI::C                                         = 0.12
 FFI::C::Stat                                   = 0.02
 FFI::CheckLib                                  = 0.31
 FFI::ExtractSymbols                            = 0.07
-FFI::Platypus                                  = 2.01
+FFI::Platypus                                  = 2.02
 FFI::Platypus::Declare                         = 1.34
 FFI::Platypus::Lang::CPP                       = 0.06
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.12
 FFI::Platypus::Lang::Go                        = 0.01
 FFI::Platypus::Lang::Pascal                    = 0.09
-FFI::Platypus::Lang::Rust                      = 0.09
+FFI::Platypus::Lang::Rust                      = 0.10
 FFI::Platypus::Legacy::Raw                     = 0.06
 FFI::Platypus::Record::StringArray             = 0.01
 FFI::Platypus::Type::Enum                      = 0.06
@@ -164,6 +164,7 @@ File::XDG                                      = 1.02
 Kafka::Librd                                   = 0.20
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
+Memcached::RateLimit                           = 0.02
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.62
 MooseX::Types::JSON                            = 1.01
@@ -200,6 +201,7 @@ Test2::Tools::JSON::Pointer                    = 0.02
 Test2::Tools::MemoryCycle                      = 0.01
 Test2::Tools::PerlCritic                       = 0.04
 Test2::Tools::Process                          = 0.06
+Test2::Tools::Rustfmt                          = 0.02
 Test2::Tools::URL                              = 0.06
 Text::HumanComputerWords                       = 0.04
 Text::Hunspell::FFI                            = 0.04
